코드 리팩토링, endpoint 변경

--- a/ai_module/siamese-threshold.ipynb
+++ b/ai_module/siamese-threshold.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src import data_prep, dataset, train"
+    "from recognition_module import data_prep, dataset, train"
    ]
   },
   {
@@ -118,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src import models\n",
-    "from src.loss import ContrastiveLoss"
+    "from recognition_module import models\n",
+    "from recognition_module.loss import ContrastiveLoss"
    ]
   },
   {
@@ -325,7 +325,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "import predict\n",
+    "import face_recognition\n",
     "\n",
     "\n",
     "def show_images(ax, image_path1, image_path2, label):\n",
@@ -345,8 +345,8 @@
     "\n",
     "        i1 = str(dataset.df.loc[idx1]['path'])\n",
     "        i2 = str(dataset.df.loc[idx2]['path'])\n",
-    "        # !python predict.py -img1 {i1} -img2 {i2}\n",
-    "        dist, issame = predict.predict(i1, i2, model, transforms, 'cpu', threshold)\n",
+    "        # !python face_recognition.py -img1 {i1} -img2 {i2}\n",
+    "        dist, issame = face_recognition.get_predict(i1, i2, model, transforms, 'cpu', threshold)\n",
     "        label = 'Dis-similarity: {:.2f}, Same person?: {}'.format(dist, bool(issame))\n",
     "\n",
     "        ax = plt.subplot(n, 2, ix+1)\n",
@@ -360,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = predict.get_model('cpu', 'weights/face-siamese-crop.pt')\n",
+    "model = face_recognition.get_model('cpu', 'weights/face-siamese-crop.pt')\n",
     "transforms = preprocess.get_transforms_inference()"
    ]
   },
@@ -405,7 +405,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from src.models import segnet\n",
+    "from recognition_module.models import segnet\n",
     "\n",
     "def fix_weights(path, out, device):\n",
     "    state_dict = torch.load(path, map_location={'cuda:2': device})\n",
