--- a/ai_module/train-siamese.ipynb
+++ b/ai_module/train-siamese.ipynb
@@ -20,9 +20,9 @@
     "from tensorboardX import SummaryWriter\n",
     "import torch\n",
     "\n",
-    "from src import data_prep, dataset, train, visualize\n",
-    "from src.loss import ContrastiveLoss\n",
-    "from src.models import segnet"
+    "from recognition_module import data_prep, dataset, train, visualize\n",
+    "from recognition_module.loss import ContrastiveLoss\n",
+    "from recognition_module.models import segnet"
    ]
   },
   {
